@@ -1,3 +1,7 @@
+2019-09-04  Andy Buckley  <andy.buckley@cern.ch>
+
+	* Add convenience accessor attributes to PDFUncertainty in Python.
+
 2019-08-14  Andy Buckley  <andy.buckley@cern.ch>
 
 	* Fix lhapdf script handling of unknown index file and data
